# smart

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
doc/: ReadMe.md
include/smart/: smart.hpp
src/: ReadMe.md  smart.hpp
src/smart/: smart.hpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
